--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
     "@uploadthing/react": "^7.3.3",
+    "@vercel/analytics": "^1.6.1",
     "drizzle-orm": "^0.45.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
